--- a/Wxm/wang/my_pc/public/login.html
+++ b/Wxm/wang/my_pc/public/login.html
@@ -61,10 +61,12 @@
     <div class="login-wrap">
         <h1 style="text-align:center">快捷登录注册</h1>
         <div id="login_input_name">
-            <input type="text" placeholder="请输入用户名" id="uname" >
+            <input type="text" placeholder="请输入用户名" id="uname">
+            <span id="uname_msg"></span><br>
        </div>
        <div id="login_input_password">
            <input type="password" placeholder="请输入密码" id="upwd">
+           <span id="upwd_msg"></span>
        </div>
        <div class="login-button" onclick="click()" type="button">登录</div>
        <div class="oauth-login">
@@ -84,5 +86,8 @@
     <script src="js/jquery-1.11.3.js"></script>
     <script src="js/footer.js"></script>
     <script src="js/header.js"></script>
+    <script>
+    
+    </script>
 </body>
 </html>
