--- a/Wxm/wang/my_pc/public/product1.html
+++ b/Wxm/wang/my_pc/public/product1.html
@@ -19,9 +19,9 @@
                    <p>&nbsp;</p>
                    <p><img src="./images/product/product1.jpeg" alt="" ></p>
                    <p>&nbsp;</p>
-                 <div class="block_product left" id=p1>
+                 <!-- <div class="block_product left" id="p1">
                     <a href="http://127.0.0.1/details?={{result.lid}}">
-                        <img src="http://127.0.0.1:8080/details"  width="300" height="313">
+                        <img src="http://127.0.0.1:8080/details"  width="300" height="313" style="display: block">
                         <span></span>
                         <span class="name"></span>
                         <span></span>
@@ -30,8 +30,8 @@
                     <h2>
                         <a href="http://127.0.0.1:8080/details?{{result.lid}}" ></a>
                     </h2>
-                </div>
-                <div class="block_product left" id=p2>
+                </div> -->
+                <!-- <div class="block_product left" id="p2">
                     <a href="#">
                         <img src="#"  width="300" height="313">
                         <span></span>
@@ -90,7 +90,7 @@
                     <h2>
                         <a href="" ></a>
                     </h2>
-                </div>
+                </div> -->
                 </div>
             </div> 
   <footer id="footer"></footer>
