所有的静态页面已经写完

--- a/Wxm/wang/my_pc/public/details.html
+++ b/Wxm/wang/my_pc/public/details.html
@@ -16,7 +16,7 @@
          <!-- 水印  -->
          <div class="pro-detail-watermark">
              <!-- 左边商品图片 8张-->
-             <!-- <img src="./images/details/1.jpg" alt="">
+            <!-- <img src="./images/details/1.jpg" alt="">
              <img src="./images/details/2.jpg" alt="">
              <img src="./images/details/3.jpg" alt="">
              <img src="./images/details/4.jpg" alt="">
@@ -24,20 +24,22 @@
              <img src="./images/details/6.jpg" alt="">
              <img src="./images/details/7.jpg" alt="">
              <img src="./images/details/8.jpg" alt=""> -->
-         </div>
+         </div> 
       </div>
       <div class="right" id="product_intro">
           <div class="clear"></div>
           <div class="brand">
-              <a href="#"> THE BEAST</a>
+              <a href="http://127.0.0.1:8080/index"> THE BEAST</a>
           </div>
-          <div class="product_name">
+          <div id="title1">
+          <!-- <div class="product_name">
             豆豆猫水晶球BlingBing口红礼盒 2支装
           </div>
           <div class="product_name_en">Kitten BlingBling Gift Box</div>
           <div class="price-label clearfix " id="showPrice"> 
               <span>￥999.00</span>
-         </div>
+         </div> -->
+        </div>
          <div class="open" id="labels-warp">
            <div class="labels">
                <div class="ht-pro-tips-tag detail-tag-no-m clearfix"> 
@@ -77,7 +79,7 @@
          <div class="cart" id="add2Cart">加入购物车</div>
          <div class="add_link" id="J_AddFav">加入收藏夹</div>
          <div class="share-links">
-           <div class="block">
+           <!-- <div class="block">
                <h3>
                    
 		            	推荐理由
@@ -95,9 +97,9 @@
                         水晶球下方配上了迷你小皮箱，复古立体格纹造型。
                         <br>
                         野兽派新款BlingBling双重自我口红搭配七夕豆豆猫水晶球礼盒，让你成为靓丽时尚的精致小野兽。
-               </p>
-           </div>
-           <div class="block">
+               </p> 
+           </div>-->
+           <!-- <div class="block">
             <h3>
                 
                      推荐理由
@@ -176,7 +178,7 @@
                      <br>
                      野兽派新款BlingBling双重自我口红搭配七夕豆豆猫水晶球礼盒，让你成为靓丽时尚的精致小野兽。
             </p>
-        </div>
+        </div> -->
          </div>
    </div>
   </div> 
@@ -185,6 +187,7 @@
 <script src="js/jquery-1.11.3.js"></script>
 <script src="js/header.js"></script>
 <script src="js/footer.js"></script>
+<script src="js/details.js"></script>
 <script>
 // dom四步 查找触发事件的元素  绑定事件  查找要修改的元素  修改元素
 $(".arrow").click(function(){
