--- a/Wxm/wang/my_pc/public/index.html
+++ b/Wxm/wang/my_pc/public/index.html
@@ -14,7 +14,7 @@
                  <!-- 第一行的大div -->
                  <div class="imgblocks bb">
                      <div class="imgblock">
-                         <a href="#" target="_blank">
+                         <a href="http://127.0.0.1:8080/product1.html" target="_blank">
                          <img class="i1" src="./images/index/bb1.1.png" />
                         </a>
                     </div>
