--- a/Wxm/wang/my_pc/public/product2.html
+++ b/Wxm/wang/my_pc/public/product2.html
@@ -76,7 +76,7 @@
    </div>
    <div id="product_list" class="center">
     <div class="block_product left" id=p1>
-        <a href="#">
+        <a href="http://127.0.0.1:8080/details.html">
             <img src="#"  width="300" height="313">
             <span></span>
             <span class="name"></span>
